--- a/index-logado.html
+++ b/index-logado.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   <title>MusicAll</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
   <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
@@ -107,7 +108,7 @@
       </div>
     </div>
 
-    <hr>
+    <hr class="purple-clear">
 
     <div class="row">
       <div class="col-lg-12">
@@ -115,7 +116,7 @@
 
         <div class="row pt-3">
           <div class="col-lg-12">
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card card-item mb-3" style="max-width: 100%;">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jt9oRHFpZfs" frameborder="0"
@@ -133,7 +134,7 @@
               </div>
             </div>
 
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card card-item mb-3" style="max-width: 100%;">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/w-rBt4pSiqk" frameborder="0"
@@ -151,7 +152,7 @@
               </div>
             </div>
 
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card card-item mb-3" style="max-width: 100%;">
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Z6-dUR-y_CI" frameborder="0"
